Added request logger part